fix: shift css and change to capitalize

--- a/assets/css/blueprint.css
+++ b/assets/css/blueprint.css
@@ -11601,3 +11601,6 @@ h6 center {
   display: flex;
 }
 /*# sourceMappingURL=blueprint.css.map */
+.datagov-v2-browsing {
+  color: #666C7A;
+}
